--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 						<br>
 						<br>
-			            <h2  style="color:lightsalmon;font: size 30px;;"> <strong>A Full Stack Developer</strong></h2>
+			            <h2  style="color:rgb(3, 2, 1);font: size 30px;;"> <strong>A Full Stack Developer</strong></h2>
 						<h3 class="d-flex" style="margin-bottom: 0">Fresher</h3>
 						<!-- <br> -->
 			            <!-- <p><a href="https://www.youtube.com/@RishabhMishraOfficial" class="btn btn-primary py-3 px-4">YouTube</a>  -->
